--- a/html/login.htm
+++ b/html/login.htm
@@ -3,41 +3,46 @@
 <head>
     <title>MiniBank - The bank of the children</title>
     <meta charset="utf-8">
+    <!-- 限制缩放，最大三倍，最小0.5 -->
+    <meta name="viewport"
+          content="width=device-width, maximum-scale=3, minimum-scale=0.5" />
+    <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
     <div id="wrapper">
-        <section id="intro">
+        <div id="intro">
             <h1>迷你银行</h1>
             <p>
-                欢迎光临“迷你银行”——我们自己的银行！<br>
+                欢迎光临“迷你银行”——孩子们自己的银行！<br>
                 很高兴能为您服务！
             </p>
-        </section>
-        <section id="login">
-            <form id="loginForm" >
-                <h1>请登录</h1>
-                <p>
-                    用户名：
-                    <input type="text" id="userName" />
-                </p>
-                <p>
-                    密码：
-                    <input type="password" id="userPassword"/>
-                </p>
-                <p>
-                    <input type="checkbox" id="rememberMe" checked>记住我
-                </p>
-                <p>
-                    <button id="loginBtn" >登录</button>
-                    <a id="forgotPsd" href="#">忘记密码</a>
-                </p>
-
-            </form>
-        </section>
-        <section id="operation">
-            <a href="#">创建我的银行</a>
-            <a href="#">家长必读</a>
-        </section>
+        </div>
+        <div id="content">
+            <div id="mainOperation">
+                <form id="loginForm" >
+                    <h1>请登录</h1>
+                    <p>
+                        用户名：
+                        <input type="text" id="userName" />
+                    </p>
+                    <p>
+                        密码：
+                        <input type="password" id="userPassword"/>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="rememberMe" checked>记住我
+                    </p>
+                    <p>
+                        <button id="loginBtn" >登录</button>
+                        <a id="forgotPsd" href="#">忘记密码</a>
+                    </p>
+                </form>
+            </div>
+            <div id="links">
+                <a href="#">创建我的银行</a>
+                <a href="#">家长必读</a>
+            </div>
+        </div>
         <footer>
 
         </footer>
