--- a/html/login.htm
+++ b/html/login.htm
@@ -22,12 +22,12 @@
                 <form id="loginForm" >
                     <h1>请登录</h1>
                     <p>
-                        用户名：
-                        <input type="text" id="userName" />
+                        <input type="text" id="userName"
+                               placeholder="您注册的邮箱" required />
                     </p>
                     <p>
-                        密码：
-                        <input type="password" id="userPassword"/>
+                        <input type="password" id="userPassword"
+                               placeholder="您的密码"  required/>
                     </p>
                     <p>
                         <input type="checkbox" id="rememberMe" checked>记住我
