修改文字样式
将提示文字放在footer区内，这样手机竖屏时，提示文字不会把正常内容挤到下面；
修改p样式。

--- a/html/login.htm
+++ b/html/login.htm
@@ -13,16 +13,18 @@
         <div id="intro">
             <h1>迷你银行</h1>
             <p>
-                欢迎光临“迷你银行”——孩子们自己的银行！<br>
+                欢迎光临“迷你银行”——孩子们自己的银行！
+            </p>
+            <p>
                 很高兴能为您服务！
             </p>
         </div>
         <div id="content">
             <div id="mainOperation">
                 <form id="loginForm" >
-                    <h1>请登录</h1>
+                    <h2>请登录</h2>
                     <p>
-                        <input type="text" id="userName"
+                        <input type="email" id="userName"
                                placeholder="您注册的邮箱" required />
                     </p>
                     <p>
@@ -39,12 +41,16 @@
                 </form>
             </div>
             <div id="links">
-                <a href="#">创建我的银行</a>
-                <a href="#">家长必读</a>
+                <ul>
+                    <li><a href="#">创建我的银行</a></li>
+                    <li><a href="#">家长必读</a></li>
+                </ul>
             </div>
         </div>
         <footer>
-
+            <p class="tip">对于电脑桌面用户，本应用不支持8.0及以下版本的IE浏览器。
+                推荐您使用Chrome、Firefox等新版浏览器访问。
+            </p>
         </footer>
 
     </div>
